Bug 1062713 - Handle normal priority messages while sending sync messages more efficiently (r=dvander)